manifests/02-reviewsv3.yaml
##################################################################################################
# Reviews service
##################################################################################################
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: reviews-v3
  labels:
    app: reviews
    version: v3
spec:
  replicas: 1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
        prometheus.io/scrape: "true"
        prometheus.io/port: "9080"
        prometheus.io/scheme: "http"
        kiali.io/runtimes: microprofile-1.1
      labels:
        app: reviews
        version: v3
    spec:
      containers:
        - name: reviews
          image: quay.io/pavolloffay/examples-bookinfo-reviews-v3:0.12.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9080
---
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: reviews
  namespace: bookinfo
  labels:
    kiali_wizard: weighted_routing
spec:
  host: reviews
  trafficPolicy: ~
  subsets:
    - labels:
        version: v1
      name: v1
    - labels:
        version: v2
      name: v2
    - labels:
        version: v3
      name: v3
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
  - route:
    - destination:
        host: reviews
        subset: v2
      weight: 100
    mirror:
        host: reviews
        subset: v3
